# depctl

./: .gitignore  Cargo.toml  DEPS  DEPS.local  README.md  build.rs
.github/workflows/: release.yml
src/: cli.rs  config.rs  main.rs  utils.rs
src/tasks/: action_task.rs  clean_task.rs  copy_file_task.rs  deps_task.rs  file_task.rs  link_file_task.rs  mod.rs  repo_task.rs  sub_repo_task.rs  task_runner.rs
